--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,6 +54,10 @@ button {
   background-color: #42f471;
 }
 
+.disactive {
+  background-color: red;
+}
+
 .operations {
   margin: 0 auto;
   padding: 5px;
